--- a/kellyportfolio/css/main.css
+++ b/kellyportfolio/css/main.css
@@ -112,12 +112,15 @@ color:#FFFCF1;
 }
 
 .grid-container > div:nth-child(1) {
-    grid-column: 1/ span6;
+    grid-column: 1 / span 2;
 }
 
 .grid-container > div:nth-child(2) {
-    grid-column: 3/ ;
+    grid-column: 3/ span 3;
 }
 .grid-container > div:nth-child(3) {
-    grid-column: 5/ ;
+    grid-column: 6/ span 3;
+}
+.grid-container > div:nth-child(4) {
+    grid-column: 9/ span 3;
 }
